{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 53,
  "lineage": "a5f94ff2-758e-19c5-d7fb-96bcb7083fc6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.177.169",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-09T21:54:57.489-07:00",
            "id": "projects/instahelper-1772547417/global/addresses/instahelper-lb-uat",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "instahelper-lb-uat",
            "prefix_length": 0,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/addresses/instahelper-lb-uat"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 40,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/disks/monitoring-uat"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/instahelper-1772547417/zones/us-central1-a/instances/monitoring-uat",
            "instance_id": "1786023640140225466",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCWC436Z6OQrUXXgNAPLtvX25Kn1uR1DUIWhLYjmsksmNtSoqpzBXc81ijJn9F3/rmnkPYA7YYyZIDF7ivAbI+U0Yp56PCYMDwBcuNyKHxu3h2So2IiBbD5JDut3lL2J1d98YGrUGFNt0gu9vp87TJR07iSHnYae37WtNqYRvhoSJBwY4E9GG+PNm4zEE8Utay6c/dD2FdabGFvCwLJlVfwgaIInr/cooGfqZcphG+lI/cb2B2LwYrlYD5D04wQoVGSc/IgW4TMG1L+q6FmjpSX+1tz89gzpb7yFZD8jpNysrdWPoeq+K0QGMY8RBjf/E67SC3IbZ6uyraGuQCx3pWWUALYaP5LBooou6hVXg2z8SQ0G13pUnj8IB58/h4FoC2udTm1YPQsy0VJV8+6GtbU3iylMy/+CiSCKOYSEaGo5P [...]
            },
            "metadata_fingerprint": "rMQF0uckxP4=",
            "name": "monitoring-uat",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.119.173",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc-uat",
                "network_ip": "10.10.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-vpc-subnet-uat",
                "subnetwork_project": "instahelper-1772547417"
              }
            ],
            "project": "instahelper-1772547417",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/instances/monitoring-uat",
            "service_account": [
              {
                "email": "776970716796-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server-uat",
              "monitoring-server-uat"
            ],
            "tags_fingerprint": "ETO2BFCxX8Q=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260226",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/disks/instahelper-uat-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/instahelper-1772547417/zones/us-central1-a/instances/instahelper-uat-1",
            "instance_id": "9075561809880160901",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCWC436Z6OQrUXXgNAPLtvX25Kn1uR1DUIWhLYjmsksmNtSoqpzBXc81ijJn9F3/rmnkPYA7YYyZIDF7ivAbI+U0Yp56PCYMDwBcuNyKHxu3h2So2IiBbD5JDut3lL2J1d98YGrUGFNt0gu9vp87TJR07iSHnYae37WtNqYRvhoSJBwY4E9GG+PNm4zEE8Utay6c/dD2FdabGFvCwLJlVfwgaIInr/cooGfqZcphG+lI/cb2B2LwYrlYD5D04wQoVGSc/IgW4TMG1L+q6FmjpSX+1tz89gzpb7yFZD8jpNysrdWPoeq+K0QGMY8RBjf/E67SC3IbZ6uyraGuQCx3pWWUALYaP5LBooou6hVXg2z8SQ0G13pUnj8IB58/h4FoC2udTm1YPQsy0VJV8+6GtbU3iylMy/+CiSCKOYSEaGo5P [...]
              "startup-script": "#!/bin/bash\napt-get update\napt-get install -y docker.io python3-pip curl\nsystemctl enable docker\nsystemctl start docker\nusermod -aG docker ubuntu\ncurl -L \"https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose\nchmod +x /usr/local/bin/docker-compose\n"
            },
            "metadata_fingerprint": "taJ76DttkXI=",
            "name": "instahelper-uat-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.114.56",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc-uat",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-vpc-subnet-uat",
                "subnetwork_project": "instahelper-1772547417"
              }
            ],
            "project": "instahelper-1772547417",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/zones/us-central1-a/instances/instahelper-uat-1",
            "service_account": [
              {
                "email": "776970716796-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app-server",
              "app-server-uat",
              "http-server-uat"
            ],
            "tags_fingerprint": "QCMSIup-2MQ=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-09T21:55:54.629-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/instahelper-1772547417/global/firewalls/allow-http-uat",
            "log_config": [],
            "name": "allow-http-uat",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc-uat",
            "priority": 1000,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/firewalls/allow-http-uat",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server-uat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-09T21:55:55.099-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/instahelper-1772547417/global/firewalls/allow-ssh-uat",
            "log_config": [],
            "name": "allow-ssh-uat",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc-uat",
            "priority": 1000,
            "project": "instahelper-1772547417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/firewalls/allow-ssh-uat",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-server-uat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/instahelper-1772547417/global/networks/instahelper-vpc-uat",
            "mtu": 0,
            "name": "instahelper-vpc-uat",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5478813422906907297",
            "project": "instahelper-1772547417",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc-uat"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-09T21:55:55.213-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-vpc-subnet-uat",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "instahelper-vpc-subnet-uat",
            "network": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/global/networks/instahelper-vpc-uat",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "instahelper-1772547417",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/instahelper-1772547417/regions/us-central1/subnetworks/instahelper-vpc-subnet-uat",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}